--- a/Atividade/public/edit.html
+++ b/Atividade/public/edit.html
@@ -76,10 +76,10 @@
       <form method="post" action="/atividade/update">
         <input type="hidden" name="id" id="id" />
 
-        <label for="nome">Nome do produto</label>
+        <label for="nome">Nome do Atividade</label>
         <input id="nome" name="nome" type="text" required />
 
-        <label for="data">Fornecedor</label>
+        <label for="data">Data Prevista</label>
         <input id="data" name="data" type="date"  />
 
        
